--- a/index.html
+++ b/index.html
@@ -6,16 +6,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--CSS-->
     <link rel="stylesheet" href="CSS/styles.css">
-    <!--Font Awesome-->
+    <!--Font Awesome Library-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--JavaScript-->
     <!--I don't need to put the javascript link near the /body because I have the "defer" property-->
     <script src="JS/main.js" defer></script>
-    
     <title>To Do List</title>
 
 </head>
 <body>
-    <h1>hello world</h1>    
+    <div class="todo-container">
+        <header>
+            <h1>Advanced To Do</h1>
+        </header>
+        <form id="todo-form">
+            <p>add your task:</p>
+            <div class="form-control">
+                <input type="text" id="todo-input" placeholder="what do we do?">
+                <button type="submit">
+                    <i class="fa-thin fa-plus"></i>
+                </button>
+            </div>
+        </form>
+        <form id="edit-form">
+            <p>edit the task</p>
+            <div class="form-control">
+                <input type="text" id="edit-input">
+                <button type="submit">
+                    <i class="fa-solid fa-check-double"></i>
+                </button>
+            </div>
+            <button id="cancel-edit-btn">
+                cancel
+            </button>
+        </form>
+        <div id="toolbar">
+            <div class="search">
+                <h4>search:</h4>
+                <form>
+                    <input type="text" id="search-input" placeholder="search">
+                    <button id="erase-button">
+                        <i class="fa-solid fa-delete-left"></i>
+                    </button>
+                </form>
+            </div>
+            <div id="filter">
+                <h4>filter</h4>
+                <select id="filter-select">
+                    <option value="all">all</option>
+                    <option value="done">done</option>
+                    <option value="todo">to do</option>
+                </select>
+            </div>
+        </div>
+        <div id="todo-list">
+            <div class="todo">
+                <h3>cut my hair</h3>
+                <button class="finish-todo">
+                    <i class="fa-solid fa-check"></i>
+                </button>
+                <button class="edit-todo">
+                    <i class="fa-solid fa-pen"></i>
+                </button>
+                <button class="remove-todo">
+                    <i class="fa-solid fa-xmark"></i>
+                </button>
+            </div>
+            <div class="todo">
+                <h3>buy cat food</h3>
+                <button class="finish-todo">
+                    <i class="fa-solid fa-check"></i>
+                </button>
+                <button class="edit-todo">
+                    <i class="fa-solid fa-pen"></i>
+                </button>
+                <button class="remove-todo">
+                    <i class="fa-solid fa-xmark"></i>
+                </button>
+            </div>
+        </div>
+    </div>   
 </body>
 </html>
