advancing in CSS
advancing in CSS

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </button>
             </div>
         </form>
-        <form id="edit-form">
+        <form id="edit-form" class="hide">
             <p>edit the task</p>
             <div class="form-control">
                 <input type="text" id="edit-input">
